[project]
name = "openapex"
version = "0.1.0"
description = "A Specialized Parser & Analytics Dashboard for RC Timing Sheets"
authors = [
    {name = "teismar", email = "eismartim@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "rapidocr-onnxruntime>=1.3.0",
    "opencv-python-headless>=4.9.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"